recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: illegal start of simple pattern
  for (var i<-0 to 3) {
       ^FourSquare:9: error: '<-' expected but '}' found.
} 
^